--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">K</h2>
     </div>
-    <!-- <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
-    </div> -->
+    <div class="balloons text-center" id="b7">
+    	<h2 style="color:#D14D39;">💖</h2>
+    </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
  
