added name and message

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sapthesh V</p>
+				<p>from the bottom of my heart...</p>
+				<p>a very happy birthday <strong>DON</strong></p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -163,11 +164,9 @@
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
-					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
+					<button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button>
 				</div>
 			</div>
-			<!-- <div class="col-md-2">
-			</div>
 			<div class="col-md-2">
 			</div>
 			<div class="col-md-2">
@@ -175,7 +174,9 @@
 			<div class="col-md-2">
 			</div>
 			<div class="col-md-2">
-			</div> -->
+			</div>
+			<div class="col-md-2">
+			</div>
 		</div>
 
 
