--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">A mesage for you</button>
-					<button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button>
+					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
-			<div class="col-md-2">
+			<!-- <div class="col-md-2">
 			</div>
 			<div class="col-md-2">
 			</div>
@@ -176,7 +176,7 @@
 			<div class="col-md-2">
 			</div>
 			<div class="col-md-2">
-			</div>
+			</div> -->
 		</div>
 
 
